add node module
Signed-off-by: niphitphon8bit <niphitphon_nt@hotmail.com>

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,56 +15,70 @@
 </ion-header>
 
 <ion-content>
-  <ion-row>
-    <ion-col col-6  *ngFor="let f of functionPages">
-      <ion-card class="card" [routerLink]="[f.url]">
-        <ion-card-header>
-          <ion-card-title>
-            <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
-          </ion-card-title>
-        </ion-card-header>
-        <ion-card-content class="ion-card-content">
-         {{f.title}}
-        </ion-card-content>
-      </ion-card>
-    </ion-col>
-    <!-- <ion-col>
-      <ion-card class="card">
-        <ion-card-header>
-          <ion-card-title>
-            <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
-          </ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-        </ion-card-content>
-      </ion-card>
-    </ion-col> -->
-  </ion-row>
-  <!-- <ion-row>
-    <ion-col offset-4>
-      <ion-card class="card">
-        <ion-card-header>
-          <ion-card-title>
-            <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
-          </ion-card-title>
-        </ion-card-header>
-        <ion-card-content class="ion-card-content">
-         
-        </ion-card-content>
-      </ion-card>
-    </ion-col>
-    <ion-col>
-      <ion-card class="card">
-        <ion-card-header>
-          <ion-card-title>
-            <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
-          </ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-        </ion-card-content>
-      </ion-card>
-    </ion-col>
-  </ion-row> -->
+  <div>
+    <ion-item [routerLink]="['/home/basedata']">
+      <ion-label>
+        Item
+      </ion-label>
+    </ion-item>
+    <ion-row responsive-sm>
+      <ion-col>
+        <ion-card class="card" [routerLink]="['/home/basedata']">
+          <ion-card-header>
+            <ion-card-title>
+              <ion-icon size="large" ios="ios-document" md="md-document"></ion-icon>
+            </ion-card-title>
+          </ion-card-header>
+          <ion-card-content class="ion-card-content">
+            <!-- <a>basrdara</a> -->
+
+            <font style="font-size: 19px;" [routerLink]="['/basedata']">basedata</font>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-card class="card" [routerLink]="['/basedata']" routerLinkActive="router-link-active">
+          <ion-card-header>
+            <ion-card-title>
+              <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
+            </ion-card-title>
+          </ion-card-header>
+          <ion-card-content class="ion-card-content">
+            <font style="font-size: 19px;">expert_type</font>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row responsive-sm>
+      <ion-col>
+        <ion-card class="card" [routerLink]="['/basedata']" routerLinkActive="router-link-active">
+          <ion-card-header>
+            <ion-card-title>
+              <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
+            </ion-card-title>
+          </ion-card-header>
+          <ion-card-content class="ion-card-content">
+            <a></a>
+            <font style="font-size: 19px;">basedata</font>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-card class="card" [routerLink]="['/basedata']" routerLinkActive="router-link-active">
+          <ion-card-header>
+            <ion-card-title>
+              <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
+            </ion-card-title>
+          </ion-card-header>
+          <ion-card-content class="ion-card-content">
+            <a></a>
+            <font style="font-size: 19px;">expert_type</font>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+
+  </div>
 </ion-content>
 
 <ion-tabs>
